Changed ul id to general name as membersList

--- a/home/index.html
+++ b/home/index.html
@@ -42,7 +42,7 @@
 
     <!-- /conatiner -->
     <div class="container">
-        <ul id="menteesList">
+        <ul id="membersList">
         </ul>
 
         <div id="modal1" class="modal"> </div>
