firebaseConfig is now in global js file

--- a/home/index.html
+++ b/home/index.html
@@ -66,22 +66,7 @@
     <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.1.0/firebase-firestore.js"></script>
 
-    <script>
-        var firebaseConfig = {
-            apiKey: "AIzaSyAQmIYmYmq2OXM1zuJanex1paJpXJp3ZXc",
-            authDomain: "mentorship-a3d79.firebaseapp.com",
-            databaseURL: "https://mentorship-a3d79.firebaseio.com",
-            projectId: "mentorship-a3d79",
-            storageBucket: "mentorship-a3d79.appspot.com",
-            messagingSenderId: "717788869014",
-            appId: "1:717788869014:web:5589ee40cf00bcb981adb7",
-            measurementId: "G-MEF1XFMLCW"
-        };
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-
-        var db = firebase.firestore();
-    </script>
+    <script src="../firebaseConfig.js"></script>
 
     <script type="text/javascript" src="index.js"></script>
 
