--- a/home/index.html
+++ b/home/index.html
@@ -1,78 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
-    <!-- Material Icons -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <!-- css main style -->
-    <link rel="stylesheet" href="style.css" />
-    <title>Mentees</title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+        <!-- Material Icons -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+        <!-- css main style -->
+        <link rel="stylesheet" href="style.css" />
+        <title>Mentees</title>
+    </head>
 
-<body>
-    <header>
-        <div class="container">
-            <div class="row">
-                <nav class="transparent">
-                    <div class="nav-wrapper">
-                        <a href="#!" class="brand-logo red-text text-darken-1">Mentees</a>
-                        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i
-                                class="material-icons red-text text-darken-1">menu</i></a>
-                        <ul class="right hide-on-med-and-down">
-                            <li><a id="mentors" href="#">Mentors</a></li>
-                            <li><a href="#">Be a Mentee</a></li>
-                            <li><a href="#">About us</a></li>
-                        </ul>
-                    </div>
-                </nav>
-                <ul class="sidenav" id="mobile-demo">
-                    <li><a class="red-text text-darken-1" href="#">Mentors</a></li>
-                    <li><a class="red-text text-darken-1" href="#">Be a Mentee</a></li>
-                    <li><a class="red-text text-darken-1" href="#">About us</a></li>
-                </ul>
+    <body>
+        <header>
+            <div class="container">
+                <div class="row">
+                    <nav class="transparent">
+                        <div class="nav-wrapper">
+                            <a href="#!" class="brand-logo red-text text-darken-1">Mentees</a>
+                            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i
+                                    class="material-icons red-text text-darken-1">menu</i></a>
+                            <ul class="right hide-on-med-and-down">
+                                <li><a id="mentors" href="#">Mentors</a></li>
+                                <li><a href="#">Be a Mentee</a></li>
+                                <li><a href="#">About us</a></li>
+                            </ul>
+                        </div>
+                    </nav>
+                    <ul class="sidenav" id="mobile-demo">
+                        <li><a class="red-text text-darken-1" href="#">Mentors</a></li>
+                        <li><a class="red-text text-darken-1" href="#">Be a Mentee</a></li>
+                        <li><a class="red-text text-darken-1" href="#">About us</a></li>
+                    </ul>
+                </div>
+                <!-- /row -->
             </div>
-            <!-- /row -->
+        </header>
+
+        <!-- /conatiner -->
+        <div class="container">
+            <ul id="membersList">
+            </ul>
+
+            <div id="modal1" class="modal"> </div>
         </div>
-    </header>
+        <!-- /conatiner -->
 
-    <!-- /conatiner -->
-    <div class="container">
-        <ul id="menteesList">
-        </ul>
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script>
+            let elem = document.querySelector(".sidenav");
+            let instance = new M.Sidenav(elem);
 
-        <div id="modal1" class="modal"> </div>
-    </div>
-    <!-- /conatiner -->
+            const modal = document.getElementById('modal1');
+            const modalInstance = M.Modal.init(modal);
 
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script>
-        let elem = document.querySelector(".sidenav");
-        let instance = new M.Sidenav(elem);
-
-        const modal = document.getElementById('modal1');
-        const modalInstance = M.Modal.init(modal);
-
-    </script>
+        </script>
 
 
-    <!-- fire base config -->
+        <!-- fire base config -->
 
-    <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.1.0/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.1.0/firebase-firestore.js"></script>
 
-    <script src="../firebaseConfig.js"></script>
+        <script>
+            var firebaseConfig = {
+                apiKey: "AIzaSyAQmIYmYmq2OXM1zuJanex1paJpXJp3ZXc",
+                authDomain: "mentorship-a3d79.firebaseapp.com",
+                databaseURL: "https://mentorship-a3d79.firebaseio.com",
+                projectId: "mentorship-a3d79",
+                storageBucket: "mentorship-a3d79.appspot.com",
+                messagingSenderId: "717788869014",
+                appId: "1:717788869014:web:5589ee40cf00bcb981adb7",
+                measurementId: "G-MEF1XFMLCW"
+            };
+            // Initialize Firebase
+            firebase.initializeApp(firebaseConfig);
 
-    <script type="text/javascript" src="index.js"></script>
+            var db = firebase.firestore();
+        </script>
+
+        <script type="text/javascript" src="index.js"></script>
 
 
 
-</body>
+    </body>
 
 
 </html>
