--- a/home/index.html
+++ b/home/index.html
@@ -21,7 +21,7 @@
                 <div class="row">
                     <nav class="transparent">
                         <div class="nav-wrapper">
-                            <a href="#!" class="brand-logo red-text text-darken-1">Mentees</a>
+                            <a href="#!" id="pageTitle" class="brand-logo red-text text-darken-1">Mentees</a>
                             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i
                                     class="material-icons red-text text-darken-1">menu</i></a>
                             <ul class="right hide-on-med-and-down">
