--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <p id='youCan'>You can find your mentor/mentee in a matter of seconds <br> lorem 'psum</p>
                 <p><span id="lookingFor"><b>Looking for?</b></span></p>
                 <div id="buttons">
-                    <a href="./home/index.html"><button class="btn" id="mentorBtn">Mentor</button></a>
-                    <a href="./home/index.html"> <button class="btn" id="menteeBtn">Mentee</button></a>
+                    <a href="./home/index.html?type=mentors"><button class="btn" id="mentorBtn">Mentor</button></a>
+                    <a href="./home/index.html?type=mentees"> <button class="btn" id="menteeBtn">Mentee</button></a>
                 </div>
             </div>
         </div>
