lorem text removed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <p>Welcome To</p>
                     <h4>Mentors & Mentees</h4>
                 </div>
-                <p id='youCan'>You can find your mentor/mentee in a matter of seconds <br> lorem 'psum</p>
+                <p id='youCan'>You can find your mentor/mentee in a matter of seconds <br></p>
                 <p><span id="lookingFor"><b>Looking for?</b></span></p>
                 <div id="buttons">
                     <a href="./home/index.html?type=mentors"><button class="btn" id="mentorBtn">Mentor</button></a>
