--- a/home/index.html
+++ b/home/index.html
@@ -25,7 +25,7 @@
                                 class="material-icons red-text text-darken-1">menu</i></a>
                         <ul class="right hide-on-med-and-down">
                             <li><a id="mentors" href="#">Mentors</a></li>
-                            <li><a class="member-btn" href="#">Be a Mentee</a></li>
+                            <li><a class="member-btn beMember" href="#">Be a Mentee</a></li>
                             <li><a href="#">About us</a></li>
                             <li class="outLi hidden"><a class="signOutBtn" href="#">Sign Out</a></li>
                         </ul>
@@ -33,7 +33,7 @@
                 </nav>
                 <ul class="sidenav" id="mobile-demo">
                     <li><a class="red-text text-darken-1" href="#">Mentors</a></li>
-                    <li><a class="member-btn red-text text-darken-1" href="#">Be a Mentee</a></li>
+                    <li><a class="member-btn red-text text-darken-1 beMember" href="#">Be a Mentee</a></li>
                     <li><a class="red-text text-darken-1" href="#">About us</a></li>
                     <li class="outLi hidden"><a class="signOutBtn red-text text-darken-1" href="#">Sign Out</a></li>
                 </ul>
