removed landing.js and moved the landing css to landing folder

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="./landing.css">
+    <link rel="stylesheet" href="./landing_page//landing.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
     </main>
 
 
-    <script src="./landing.js"></script>
+    <script src="./landing_page//landing.js"></script>
 </body>
 
 </html>
