added get user info

--- a/form/index.html
+++ b/form/index.html
@@ -152,6 +152,7 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
+  <script src="../Auth.js"></script>
   <script src="./index.js"></script>
 
   <script></script>
