--- a/home/index.html
+++ b/home/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <!-- css main style -->
     <link rel="stylesheet" href="style.css" />
+    <!-- fontawesome icons -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.2/css/all.css">
     <title>Mentees</title>
 </head>
 
@@ -79,7 +81,8 @@
 
     <div id="signOutModal" class="modal">
         <div class="modal-content">
-            <h5>You have been signed out</a></h5>
+            <h5>You have been signed out</a>
+            </h5>
         </div>
     </div>
 
@@ -97,7 +100,6 @@
 
         const signOutModal = document.getElementById('signOutModal');
         const signOutModalInstance = M.Modal.init(signOutModal);
-
     </script>
 
 
