--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing</title>
+    <title>Mentorship</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="./landing_page//landing.css">
 </head>
@@ -18,7 +18,7 @@
                     <p>Welcome To</p>
                     <h4>Mentors & Mentees</h4>
                 </div>
-                <p id='youCan'>You can find your mentor/mentee in a matter of seconds <br> lorem 'psum</p>
+                <p id='youCan'>You can find your mentor/mentee in a matter of seconds</p>
                 <p><span id="lookingFor"><b>Looking for?</b></span></p>
                 <div id="buttons">
                     <a href="./home/index.html?type=mentors"><button class="btn" id="mentorBtn">Mentor</button></a>
