changes the home page title according to member type

--- a/home/index.html
+++ b/home/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css" />
     <!-- fontawesome icons -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.2/css/all.css">
-    <title>Mentees</title>
+    <title id="page_title">Mentees</title>
 </head>
 
 <body>
