Delete Confirmation buttons made red

--- a/home/index.html
+++ b/home/index.html
@@ -89,8 +89,8 @@
 
     <div id="deleteConfirmModal" class="modal">
         <div class="modal-content">
-            <a id="delBtn" class="waves-effect waves-light btn-large">Delete</a>
-            <a href="#!" class="modal-close waves-effect waves-light btn-large">Cancel</a> </div>
+            <a id="delBtn" class="waves-effect waves-light btn-large red">Delete</a>
+            <a href="#!" class="modal-close waves-effect waves-light btn-large red">Cancel</a> </div>
 
     </div>
 
