cleaning the code and adding some new features

--- a/form/index.html
+++ b/form/index.html
@@ -13,8 +13,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
   <link rel="stylesheet" href="./css/style.css" />
-
-  <title>Form Page</title>
+  <link rel="shortcut icon" type="image/png" href="images/coding.png">
+  <title>Form</title>
 </head>
 
 <body>
