--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Mentorship</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="./landing_page//landing.css">
+    <link rel="shortcut icon" type="image/png" href="images/coding.png">
 </head>
 
 <body>
